language_theory/TP2/grammar4/parser.output
   0  $accept : %entry% $end

   1  sp : s EOF

   2  s : u

   3  v :

   4  w :

   5  u : v w u
   6    | A

   7  %entry% : '\001' sp

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


1: shift/reduce conflict (shift 3, reduce 3) on A
state 1
	%entry% : '\001' . sp  (7)
	v : .  (3)

	A  shift 3

	sp  goto 4
	s  goto 5
	u  goto 6
	v  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	u : A .  (6)

	.  reduce 6


state 4
	%entry% : '\001' sp .  (7)

	.  reduce 7


state 5
	sp : s . EOF  (1)

	EOF  shift 8
	.  error


state 6
	s : u .  (2)

	.  reduce 2


state 7
	u : v . w u  (5)
	w : .  (4)

	.  reduce 4

	w  goto 9


state 8
	sp : s EOF .  (1)

	.  reduce 1


9: shift/reduce conflict (shift 3, reduce 3) on A
state 9
	u : v w . u  (5)
	v : .  (3)

	A  shift 3

	u  goto 10
	v  goto 7


state 10
	u : v w u .  (5)

	.  reduce 5


Rules never reduced:
	v :  (3)


State 1 contains 1 shift/reduce conflict.
State 9 contains 1 shift/reduce conflict.


5 terminals, 7 nonterminals
8 grammar rules, 11 states
